--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 	<head>
-		<title>A multiplayer game built using HTML5 canvas and WebSockets</title>
+		<title>Ninja Game</title>
 		<meta charset="utf-8">
 		
 		<link rel="stylesheet" href="style/reset.css">
@@ -12,15 +12,13 @@
 	
 	<body>
 		<canvas id="gameCanvas"></canvas>
-		<script src = "http://ta-9.cs.byu.edu:8000/socket.io/socket.io.js"></script>
-		<script src="js/requestAnimationFrame.js"></script>
-		<script src="js/Keys.js"></script>
-		<script src="js/Player.js"></script>
-		<script src="js/game.js"></script>
+		<script src = "http://code.jquery.com/jquery-2.1.3.min.js"></script>
+		<script src = "js/loadSocket.js"></script>
+		
 		<script>
 			// Initialise the game
-			init();
-			animate();
+			//init();
+			//animate();
 		</script>
 	</body>
 </html>
