ntered on player

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
 
 	<head>
-		<title>Ninja Game</title>
+		<title>Ninja Brawl</title>
 		<meta charset="utf-8">
-		
+	   
 		<link rel="stylesheet" href="style/reset.css">
 		<link rel="stylesheet" href="style/game.css">
 	</head>
