--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<title>Ninja Brawl</title>
 		<meta charset="utf-8">
-	   
+	   	<script src = '/socket.io/socket.io.js'></script>
 		<link rel="stylesheet" href="style/reset.css">
 		<link rel="stylesheet" href="style/game.css">
 	</head>
@@ -13,7 +13,16 @@
 	<body>
 		<canvas id="gameCanvas"></canvas>
 		<script src = "http://code.jquery.com/jquery-2.1.3.min.js"></script>
-		<script src = "js/loadSocket.js"></script>
+		<script src = "js/requestAnimationFrame.js"></script>
+		<script src = "js/Keys.js"></script>
+		<script src = "js/Player.js"></script>
+		<script src = "js/Level.js"></script>
+		<script src = "js/game.js"></script>
+		<script type="text/javascript">
+			console.log("Loaded game");
+		    init();
+		    animate();
+		</script>
 		
 		<script>
 			// Initialise the game
