User security redirect

--- a/html/login.html
+++ b/html/login.html
@@ -34,16 +34,19 @@
     <p>Enter a password<br><input id="newpass" type="text" class="resizedTextbox" /></p>
     <p>Re-enter your password<br><input id="reenter" type"text" class="resizedTextbox" /></p>
     <input id="creatbtn" type="submit" value="Create" class="resizedButton" />
+    </form>
   </div>
 </script>
 
 <script type="text/ng-template" id="/securityQ.html">
   <div id="question">
     <h2>Security question</h2>
+    <form id="securityQuestionForm" action = "/">
     <p>Enter a security question so you can recover your password</p>
     <p>Question<br><input id="question" type="text" class="resizedTextbox" /></p>
     <p>Answer<br><input id="answer" type="text" class="resizedTextbox" /></p>
     <input id="qsubmit" type="submit" value="Submit" class="resizedButton" />
+    </form>
   </div>
 </script>
 </div>
