--- a/html/loggedin.html
+++ b/html/loggedin.html
@@ -3,5 +3,10 @@
 </head>
 <body>
 Logged in
+<script>
+    console.log(document);
+    console.log(document.session);
+</script>
+
 </body>
 </html>
